--- a/app.html
+++ b/app.html
@@ -54,7 +54,7 @@
           <div class="wind">Wind Speed: 20km/hr</div>
         </div>
       </div>
-      <table class="prediction">
+      <!--<table class="prediction">
         <tr class="Sunday">
           <th>Sunday</th>
           <td>
@@ -102,7 +102,7 @@
           <td><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""></td>
           <td>18°C</td>
         </tr>
-      </table>
+      </table>-->
     </div>
   </body>
 </html>
