--- a/newindex.html
+++ b/newindex.html
@@ -7,10 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet" />
     <title>Weather App</title>
     <link rel="stylesheet" href="newstyle.css">
 </head>
@@ -30,7 +27,9 @@
         <div class="content">
             <div class="locationAndTemperature">
                 <div class="location">Lucknow</div>
-                <div class="temperature"><h1>15° C </h1></div>
+                <div class="temperature">
+                    <h1>15° C </h1>
+                </div>
                 <div class="description">Sunny</div>
                 <div class="day7">Sunday</div>
             </div>
@@ -41,12 +40,24 @@
             </div>
         </div>
         <div class="prediction">
-            <div class="day1 day"><h4>Monday</h4></div>
-            <div class="day2 day"><h4>Tuesday</h4></div> 
-            <div class="day3 day"><h4>Wednesday</h4></div>
-            <div class="day4 day"><h4>Thursday</h4></div>
-            <div class="day5 day"><h4>Friday</h4></div>
-            <div class="day6 day"><h4>Saturday</h4></div>
+            <div class="day1 day">
+                <h4>Monday</h4>
+            </div>
+            <div class="day2 day">
+                <h4>Tuesday</h4>
+            </div>
+            <div class="day3 day">
+                <h4>Wednesday</h4>
+            </div>
+            <div class="day4 day">
+                <h4>Thursday</h4>
+            </div>
+            <div class="day5 day">
+                <h4>Friday</h4>
+            </div>
+            <div class="day6 day">
+                <h4>Saturday</h4>
+            </div>
         </div>
     </div>
 </body>
