--- a/newindex.html
+++ b/newindex.html
@@ -35,28 +35,34 @@
             </div>
             <div class="windHumidityPressure">
                 <div class="wind">Wind:<span></span> 5 Km/h </span> </div>
-                <div class="humidity"> <span>39% </span> </div>
-                <div class="pressure">humidity: <span>1012 mb</span></div>
+                <div class="humidity"> humidity:<span>39% </span> </div>
+                <div class="pressure">pressure: <span>1012 mb</span></div>
             </div>
         </div>
         <div class="prediction">
             <div class="day1 day">
                 <h4>Monday</h4>
+                <h2>16° C </h2>
             </div>
             <div class="day2 day">
                 <h4>Tuesday</h4>
+                <h2>16° C </h2>
             </div>
             <div class="day3 day">
                 <h4>Wednesday</h4>
+                <h2>16° C </h2>
             </div>
             <div class="day4 day">
                 <h4>Thursday</h4>
+                <h2>16° C </h2>
             </div>
             <div class="day5 day">
                 <h4>Friday</h4>
+                <h2>16° C </h2>
             </div>
             <div class="day6 day">
                 <h4>Saturday</h4>
+                <h2>16° C </h2>
             </div>
         </div>
     </div>
